# hugo

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  ROADMAP.md  SECURITY.md  build_package.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_imports.py
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-verified.yml  publish.yml  security.yml  tests.yml
docs/: API.md  advanced_features.md  architecture.md  deployment.md  quickstart.md
examples/: advanced_trading_example.py  benchmark_example.py  cartpole_basic.py  cartpole_with_llm.py  collaboration_example.py  compare_algorithms.py  complete_workflow.py  dqn_lunarlander.py  huggingface_integration.py  hyperparameter_tuning_example.py  multiagent_example.py  offline_rl_example.py  robotics_example.py  stock_trading_example.py  trading_example.py  visualization_example.py
examples/config_examples/: cartpole_llm.yaml  trading_openai.yaml
examples/notebooks/: 01_quickstart.ipynb  02_llm_reward_shaping.ipynb  03_offline_rl.ipynb  04_multiagent.ipynb
rl-llm-toolkit/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
rl-llm-toolkit/.github/: pull_request_template.md
rl-llm-toolkit/docs/: api_reference.md  faq.md
rl-llm-toolkit/examples/: advanced_training.py
rl-llm-toolkit/rl_llm_toolkit/: __init__.py
rl_llm_toolkit/: __init__.py
rl_llm_toolkit/agents/: __init__.py  cql.py  dqn.py  iql.py
rl_llm_toolkit/benchmarks/: __init__.py  metrics.py  suite.py
rl_llm_toolkit/cli/: __init__.py  main.py
rl_llm_toolkit/collaboration/: __init__.py  session.py  shared_buffer.py
rl_llm_toolkit/core/: __init__.py
rl_llm_toolkit/environments/: __init__.py  robotics.py  stock_trading.py
rl_llm_toolkit/integrations/: __init__.py  huggingface.py  leaderboard.py
rl_llm_toolkit/llm/: __init__.py  base.py  ollama.py
rl_llm_toolkit/multiagent/: __init__.py  (+2 more)
tests/: conftest.py  test_agents.py  test_benchmarks.py  test_cli.py  test_collaboration.py  test_config.py  test_environment.py  test_integration_e2e.py  test_integrations.py  test_llm.py  test_multiagent.py  test_networks.py  test_offline_rl.py  test_reward_shaper.py  test_robotics_envs.py  test_trading_env.py
(+24 files in other folders)
